<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#fffefd"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="toa.toa.Main2Activity">


    <LinearLayout
        android:id="@+id/comunidadesDeportivas"
        android:layout_width="fill_parent"
        android:layout_height="126dp"
        android:layout_marginBottom="12dp"
        android:background="#33cd99"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/triatlon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/comunity_sports" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nutricion"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_marginBottom="12dp"
        android:background="#3298c9"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/nutricion" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/nutricion" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/noticias"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_marginBottom="12dp"
        android:background="#337177"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/noticias" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/news" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tiendasOnLine"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_marginBottom="12dp"
        android:background="#58bba4"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/tienda" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/store" />
    </LinearLayout>
</LinearLayout>
