<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conatiner_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_registro"
    tools:context="toa.toa.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="?attr/colorPrimary"
        android:elevation="2dp"
        android:minHeight="?attr/actionBarSize" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_awesome_toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#fefefe"
        android:elevation="2dp"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_name_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/reg_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_nombre_etxt"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_last_name_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_name_cnt"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/reg_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_apellidos_etxt"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_last_name_cnt"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/reg_usr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_usuario_etxt"
                android:inputType="text"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_pw_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_last_name_cnt"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/reg_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reg_usr"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_email_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_pw_cnt"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reg_pw"
                android:ems="10"
                android:hint="@string/reg_email_etxt"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <com.dd.CircularProgressButton
        android:id="@+id/go_register"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:cpb_colorIndicator="?attr/colorPrimary"
        app:cpb_cornerRadius="0dp"
        app:cpb_selectorIdle="@drawable/button_go"
        app:cpb_textComplete="Completado"
        app:cpb_textError="Error"
        app:cpb_textIdle="@string/title_activity_register" />


</RelativeLayout>
